--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -46,7 +46,7 @@
             </div>
             <div id="main-content">
                 <center><h3>INSERT DATA</h3></center>
-                <form action="">
+                <form action="" >
                     <input type="number" placeholder="ID" id="id">
                     <input type="text" placeholder="NAME" id="name">
                     <input type="text" placeholder="ADDRESS" id="address">
@@ -57,7 +57,7 @@
             </div>
             <div id="bottom">
                 <a href="./insert.html"><button type="button">Clear</button></a>
-                <button type="button">Submit</button>
+                <!-- <button type="button">Submit</button> -->
                 <button type="button" onclick="prt();">Print</button>
                 <a href="./table.html"><button type="button">Show</button></a>
             </div>
