--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -53,7 +53,7 @@
                         <th>Course</th>
                         <th>Grade</th>
                         <th>Delete</th>
-                        <th>Modify</th>
+                        <th>Update</th>
                     </thead>
                     <tbody id="display_data">
                         <td></td>
@@ -81,7 +81,7 @@
             <div id="bottom">
                 <button type="button" onclick="clear();">Prev</button>
                 <button type="button" onclick="prt();">Print</button>
-                <button type="button" onclick="fet();">Fetch</button>
+                <button type="button">Fetch</button>
                 <button type="button" onclick="next();">Next</button>
             </div>
         </div>
