--- a/index.html
+++ b/index.html
@@ -45,132 +45,12 @@
                 </ul>
             </div>
             <div id="main-content">
-
-                <!-- <div id="box">
-                    <h4>Insert Data in Table</h4>
-                    <img src="https://static.wixstatic.com/media/17ac83_810739dfef3941449effd1751ba1c080~mv2.gif"
-                        alt="">
-                    <div>
-                        <h5>S.Id</h5>
-                        <hr width="250px" color="#24315E">
-                        <h5>Unknown</h5>
-                    </div>
-                    <div>
-                        <h5>Student Name</h5>
-                        <h5>Unknown</h5>
-                    </div>
-                    <div>
-                        <h5>Address</h5>
-                        <h5>Unknown</h5>
-                    </div>
-                    <div>
-                        <h5>Course</h5>
-                        <h5>Unknown</h5>
-                    </div>
-                    <div>
-                        <h5>Grade</h5>
-                        <h5>Unknown</h5>
-                    </div>
-                    <a href="./HtmlFiles/insert.html"><button type="button">Insert</button></a>
-                </div> -->
-                <!-- <div id="box">
-                    <h4>Fetch Data From Table</h4>
-                    <img src="https://www.investmentz.com/images/loader_new.gif"
-                        alt="">
-                    <div>
-                        <h5>S.Id</h5>
-                        <hr width="400px" color="white">
-                        <h5>Cybrom-1032</h5>
-                    </div>
-                    <div>
-                        <h5>Student Name</h5>
-                        <h5>SURAJ KUMAR</h5>
-                    </div>
-                    <div>
-                        <h5>Address</h5>
-                        <h5>BHOPAL (MP)</h5>
-                    </div>
-                    <div>
-                        <h5>Course</h5>
-                        <h5>JAVA FULLSTACK</h5>
-                    </div>
-                    <div>
-                        <h5>Grade</h5>
-                        <h5>A+</h5>
-                    </div>
-                    <a href="./HtmlFiles/table.html"><button type="button">Fetch Data</button></a>
-                </div>
-                <div id="box">
-                    <h4>Team Work</h4>
-                    <img src="https://gdsc.dbit.in/img/logo/teamwork.gif" alt="">
-
-                    <div>
-                        <h5>Team Leader</h5>
-                        <hr width="320px" color="white">
-                        <h5>MR. QUASIM SIR</h5>
-                    </div>
-                    <div>
-                        <h5>Team Management</h5>
-                        <h5>SURAJ KUMAR</h5>
-                    </div>
-                    <div>
-                        <h5>Frontend Developer</h5>
-                        <h5>RAJAN KUMAR</h5>
-                    </div>
-                    <div>
-                        <h5>Backend Developer</h5>
-                        <h5>DEVANSH GARG</h5>
-                    </div>
-                    <div>
-                        <h5>Tester</h5>
-                        <h5>SUSHIL LOVANSHI</h5>
-                    </div>
-                    <a href="./HtmlFiles/team.html"><button type="button">See Teams</button></a>
-                </div> -->
-                
-                <!-- <aside float="right">
-                <img src="suraj.jpg" alt="">
-                <p>Welcome Back!!</p>
-                <h2>SURAJ KUMAR</h2>
-                <div>
-                    <i class="fa-solid fa-arrow-trend-down" id="arrow1"></i>
-                    <p>income <br>$32468.395</p>
-                    <p><i class="fa-solid fa-ellipsis"></i></p>
-                </div>
-
-                <div>
-                    <i class="fa-solid fa-arrow-trend-up" id="arrow2"></i>
-                    <p>Expenses <br>$26848.354</p>
-                    <p><i class="fa-solid fa-ellipsis"></i></p>
-                </div>
-                <div id="flow">
-                    <h2>Money Flow</h2>
-                    <div id="chart">
-                        <div id="div1"></div>
-                        <div id="div2"></div>
-                        <div id="div3"></div>
-                        <div id="div4"></div>
-                        <div id="div5"></div>
-                        <div id="div6"></div>
-                        <div id="div7"></div>
-                        <div id="div8"></div>
-                    </div>
-                    <div id="describe1">
-                        <p>Income</p>
-                        <p><i class="fa-solid fa-circle"></i></p>
-                    </div>
-                    <div id="describe2">
-                        <p>Expenses</p>
-                        <p><i class="fa-solid fa-circle"></i></p>
-                    </div>
-                </div>
-                </aside> -->
                 <div id="box">
                     <h1>DASHBOARD</h1>
                 </div>
             </div>
         </div>
-        <script src="../script.js"></script>
+        <script src="./script.js"></script>
 </body>
 
 </html>
