Presentation Day of Dash-Board

--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -45,8 +45,10 @@
                 </ul>
             </div>
             <div id="main-content">
-                <center><h3>INSERT DATA</h3></center>
-                <form action="" >
+                <center>
+                    <h3>INSERT DATA</h3>
+                </center>
+                <form action="">
                     <input type="number" placeholder="ID" id="id">
                     <input type="text" placeholder="NAME" id="name">
                     <input type="text" placeholder="ADDRESS" id="address">
