--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -68,7 +68,9 @@
 
                 <!-- Edit Form -->
                 <form action="" id="myfrm">
-                    <center><h2>EDIT DATA</h2></center>
+                    <center>
+                        <h2>EDIT DATA</h2>
+                    </center>
                     <input type="number" placeholder="ID" id="id">
                     <input type="text" placeholder="NAME" id="name">
                     <input type="text" placeholder="ADDRESS" id="address">
