--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./CssFile/dash.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,7 +45,7 @@
                                 class="fa-solid fa-magnifying-glass"></i></button></li>
                 </ul>
             </div>
-            <div id="main-content">
+            <div id="main-content" style="display: none;">
                 <div id="box">
                     <h1>DASHBOARD</h1>
                 </div>
