--- a/Form/register.html
+++ b/Form/register.html
@@ -56,8 +56,8 @@
         form #submit {
             padding: 15px;
             border-radius: 50px;
-            background-color: #24315E;
-            border: 1px solid #24315E;
+            background-color: #5B9BBF;
+            border: 1px solid #5B9BBF;
             color: white;
             font-weight: bold;
             cursor: pointer;
@@ -65,7 +65,7 @@
 
         form #submit:hover {
             background-color: white;
-            color: #24315E;
+            color: #5B9BBF;
             border: 1px solid;
         }
 
@@ -73,7 +73,7 @@
             text-decoration: none;
             font-size: 14px;
             font-weight: bold;
-            color: #24315E;
+            color: #5B9BBF;
         }
     </style>
 </head>
