--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="main">
-        <div id="left">
+        <div id="left" style="display: none;">
             <p>ADMIN <br>SURAJ KUMAR</p>
             <a href="../index.html"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="hero">
-            <div id="navbar">
+            <div id="navbar" style="display: none;">
                 <ul id="first">
                     <li id="welc">Dashboard</li>
                 </ul>
