--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -70,6 +70,7 @@
                 <!-- Edit Form -->
                 <form action="" id="myfrm">
                     <center>
+                        <button type="button" id="btn" onclick="cls1();">X</button>
                         <h2>EDIT DATA</h2>
                     </center>
                     <input type="number" placeholder="ID" id="id">
