--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div id="alert">
             <button onclick="cls();">X</button>
-            <h2>Nothing alert!! here..</h2>
+            <h2>Notifications !!</h2>
             <div>
                 <p><i class="fa-solid fa-table-list"></i> &nbsp;Insert</p>
                 <p><i class="fa-solid fa-chart-line"></i> &nbsp;Table</p>
